--- a/carrito.html
+++ b/carrito.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event|races</title>
+    <title>Event|races - Carrito</title>
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
@@ -26,19 +26,12 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link me-2" href="./index.html">Calle</a>
+                            <a class="boton-volver" href="./index.html"><i class="bi bi-arrow-left-circle"></i> Sumar carreras</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link me-2" href="./index.html">Trail</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link me-2" href="./index.html"> + Mi cuenta</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link me-2" href="./carrito.html">
+                            <a class="bton-carrito" href="./carrito.html">
                                 <i class="bi bi-cart4"></i>
                                 <span id="cuenta-carrito">0</span></a>
-                            </a>
                         </li>
                     </ul>
                 </div>
@@ -47,12 +40,19 @@
         <!-- ends nav -->
     </header>
     <main>
-        <section id="productos-container">
+        <section id="carrito-container">
             <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-            <script src="../js/carreras.js"></script>
-            <script src="../js\carrito.js"></script>
-            <script src="../js/index.js"></script>
+            <script src="./js/carreras.js"></script>
+            <script src="./js/carrito.js"></script>
+            <script src="./js/index.js"></script>
         </section>
+        <section id="compra-final">
+            <p>Cantidad: <span id="unidades">0</span></p>
+            <p>Total:$ <span id="valor-final">0</span></p>
+            <button>Finalizar Compra</button>
+            <button>Vaciar Carrito</button>
+        </section>
+        
     </main>
     <footer>
         <a href="./index.html">
