--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link me-2" href="./index.html">Calle</a>
+                            <a class="nav-link btn-categoria me-2" id="calle" href="./error404.html" target="_black">Calle</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link me-2" href="./index.html">Trail</a>
+                            <a class="nav-link btn-categoria me-2" id="trail" href="./error404.html" target="_black">Trail</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link me-2" href="./index.html"> + Mi cuenta</a>
+                            <a class="nav-link me-2" href="./login.html"> + Mi cuenta</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link me-2" href="./carrito.html">
@@ -48,10 +48,8 @@
     </header>
     <main>
         <section id="productos-container">
-            <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-            <script src="../js/carreras.js"></script>
-            <script src="../js\carrito.js"></script>
-            <script src="../js/index.js"></script>
+            
+            
         </section>
     </main>
     <footer>
@@ -79,6 +77,9 @@
             © 2023 Event|races.js | Encontrá tus mejores carreras
         </p>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript" src="/js/carreras.js"></script>
+  
+    <script type="text/javascript" src="/js/index.js"></script>
 </body>
 </html>
